<resources>
    <string name="app_name">S1CFundamental</string>
    <string name="name">Name</string>
    <string name="followers">"Followers: "</string>
    <string name="following">"Following : "</string>
    <string name="repository">"Repository: "</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="splash">GitHub</string>
    <string name="username">Username </string>
    <string name="version">version 0.0.0.1</string>
    <!--  Other string resources -->
    <string-array name="data_username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>
    <string-array name="data_name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>
    <string-array name="data_location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>
    <string-array name="data_repository">
        <item>Repository : 102</item>
        <item>Repository : 37</item>
        <item>Repository : 9</item>
        <item>Repository : 30</item>
        <item>Repository : 56</item>
        <item>Repository : 28</item>
        <item>Repository : 44</item>
        <item>Repository : 110</item>
        <item>Repository : 1064</item>
        <item>Repository : 65</item>
    </string-array>
    <string-array name="data_company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>
    <string-array name="data_followers">
        <item>Followers : 56995</item>
        <item>Followers : 5153</item>
        <item>Followers : 7972</item>
        <item>Followers : 14725</item>
        <item>Followers : 788</item>
        <item>Followers : 18628</item>
        <item>Followers : 277</item>
        <item>Followers : 178</item>
        <item>Followers : 428</item>
        <item>Followers : 465</item>
    </string-array>
    <string-array name="data_following">
        <item>Following : 12</item>
        <item>Following : 2</item>
        <item>Following : 0</item>
        <item>Following : 1</item>
        <item>Following : 0</item>
        <item>Following : 3</item>
        <item>Following : 39</item>
        <item>Following : 23</item>
        <item>Following : 61</item>
        <item>Following : 10</item>
    </string-array>

    <integer-array name="data_avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </integer-array>

</resources>